ansible/inventory/redhat_aws_ec2: filter running instances
Previously the lookup took also terminated instances causing unexpected
errors while trying to connect gone workers. By using filters we:

1. improve the performance, the initial query already does the filtering
2. include only `running` instances

The previously used `include_fiters` is done after querying all the
instances.

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/ansible/inventory/redhat_aws_ec2.yaml
+++ b/ansible/inventory/redhat_aws_ec2.yaml
@@ -12,10 +12,11 @@ cache_connection: .direnv/aws-cache
 
 boto_profile: redhat_us_east_1_ansible_inventory
 
-include_filters:
-  - tag:Name:
-      - "testing_farm_worker_*"
-      - "testing-farm-worker-*"
+filters:
+  tag:Name:
+    - "testing_farm_worker_*"
+    - "testing-farm-worker-*"
+  instance-state-name: "running"
 
 hostnames:
   - "tag:Name"
