--- a/tests/worker/public/tmt-container-test-name.yaml
+++ b/tests/worker/public/tmt-container-test-name.yaml
@@ -51,6 +51,7 @@ checks:
        {{ skipped_testsuite_pattern }}
        {{ skipped_testsuite_pattern }}
        {{ skipped_testsuite_pattern }}
+       {{ skipped_testsuite_pattern }}
        <testsuite name="{{ PLAN }}" result="passed" tests="1" stage="complete">
         <logs>
          <log href="{{ artifacts_url_pattern }}/{{ REQUEST_ID }}/work-test-filter{{ '.+' }}{{ PLAN }}/data" name="data"/>
@@ -127,6 +128,7 @@ checks:
        <testsuite name="/testing-farm/filter" tests="0" failures="0" errors="0" skipped="0"/>
        <testsuite name="/testing-farm/multihost/basic" tests="0" failures="0" errors="0" skipped="0"/>
        <testsuite name="/testing-farm/multihost/invalid-provision-how" tests="0" failures="0" errors="0" skipped="0"/>
+       <testsuite name="/testing-farm/oom" tests="0" failures="0" errors="0" skipped="0"/>
        <testsuite name="/testing-farm/reboot" tests="0" failures="0" errors="0" skipped="0"/>
        <testsuite name="/testing-farm/reserve" tests="0" failures="0" errors="0" skipped="0"/>
        <testsuite name="/testing-farm/sanity" tests="0" failures="0" errors="0" skipped="0"/>
