ansible/inventory: use `profile` instead of `boto_profile`
After new `amazon.aws` release the `boto_profile` option was deprecated.
Migrate to the supported `profile` option supported already for some
time.

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/ansible/inventory/fedora_aws_ec2.yaml
+++ b/ansible/inventory/fedora_aws_ec2.yaml
@@ -10,7 +10,7 @@ cache: true
 cache_plugin: ansible.builtin.jsonfile
 cache_connection: .direnv/aws-cache
 
-boto_profile: fedora_us_east_2
+profile: fedora_us_east_2
 
 include_filters:
   - tag:ServiceOwner:
