--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,1 @@
-secrets/credentials.yml diff=ansible-vault merge=ansible-vault
+ansible/secrets/credentials.yaml diff=ansible-vault merge=ansible-vault
