Support deploying oculus next
We decided we will provide a way how to easily deploy the next version
of oculus to preview some larger changes.

We are trying this now now with:

https://gitlab.com/testing-farm/oculus/-/merge_requests/84

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/ansible/inventory/group_vars/testing_farm_dev_public_workers.yaml
+++ b/ansible/inventory/group_vars/testing_farm_dev_public_workers.yaml
@@ -72,7 +72,13 @@ jobs:
 # artifacts
 artifacts_user: artifacts
 artifacts_hostname: artifacts.dev-{{ lookup('env', 'USER') }}.testing-farm.io
+
+# api
 api_hostname: api.dev-{{ lookup('env', 'USER') }}.testing-farm.io
+
+# oculus
+oculus_url: https://gitlab.com/testing-farm/oculus/-/raw/main/results.html
+oculus_next_url: https://gitlab.com/mhoyer/oculus/-/raw/fasthtml/next.html
 
 # worker instance details
 worker_instance_type: i3.large
