--- a/ansible/inventory/group_vars/testing_farm_staging_public_workers.yaml
+++ b/ansible/inventory/group_vars/testing_farm_staging_public_workers.yaml
@@ -70,7 +70,13 @@ jobs:
 # artifacts
 artifacts_user: artifacts
 artifacts_hostname: artifacts.staging.testing-farm.io
+
+# api
 api_hostname: api.staging.testing-farm.io
+
+# oculus
+oculus_url: https://gitlab.com/testing-farm/oculus/-/raw/main/results.html
+oculus_next_url: https://gitlab.com/mhoyer/oculus/-/raw/fasthtml/next.html
 
 # worker instance details
 worker_instance_type: i3.large
