Add image mode compose tests
Generate compose tests for added image mode composes.

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/terragrunt/environments/dev/worker-local/citool-config/guest-setup/pre-artifact-installation/workaround-fedora-rawhide.yaml
+++ b/terragrunt/environments/dev/worker-local/citool-config/guest-setup/pre-artifact-installation/workaround-fedora-rawhide.yaml
@@ -16,4 +16,6 @@
       delay: "{{ pkg_retry_delay }}"
       until: update_packages is succeeded
 
-  when: check_rawhide.rc == 0
+  when:
+    - check_rawhide.rc == 0
+    - '"image-mode" not in IMAGE_NAME|lower'
