--- a/terragrunt/environments/dev/worker-local/citool-config/guest-setup/pre-artifact-installation/install-koji-brew.yaml
+++ b/terragrunt/environments/dev/worker-local/citool-config/guest-setup/pre-artifact-installation/install-koji-brew.yaml
@@ -33,6 +33,7 @@
     - 'ansible_distribution == "CentOS"'
     - 'ansible_distribution_release == "Stream"'
     - "ansible_distribution_major_version | int == 10"
+    - '"image-mode" not in IMAGE_NAME|lower'
   retries: "{{ pkg_retry_count }}"
   delay: "{{ pkg_retry_delay }}"
   until: result_package is succeeded
