--- a/tests/worker/public/compose-Fedora-41-image-mode-x86_64.yaml
+++ b/tests/worker/public/compose-Fedora-41-image-mode-x86_64.yaml
@@ -15,14 +15,10 @@ marks:
   - public
   - compose
 
-  - name: skip
-    reason: |
-      Image is broken currently.
-
 variables:
-  REQUEST_ID: e06cedb8-c80d-4853-8ed5-5484652337b7
-  COMPOSE: Fedora-40-image-mode
-  ARCH: aarch64
+  REQUEST_ID: 70fd54b3-f767-42b4-aca6-1d144aef1a27
+  COMPOSE: Fedora-41-image-mode
+  ARCH: x86_64
   RESULT: PASSED
   GIT_CLONE_URL: https://gitlab.com/testing-farm/tests
   GIT_REF: main
