--- a/terragrunt/environments/production/artemis/config/variables_images.yaml
+++ b/terragrunt/environments/production/artemis/config/variables_images.yaml
@@ -5,9 +5,15 @@ composes:
     compose: Fedora-41
 
     x86_64: &fedora_latest_ref_x86_64
-      image: Fedora-Cloud-Base-AmazonEC2.x86_64-41-20250522.0
+      image: Fedora-Cloud-Base-AmazonEC2.x86_64-41-20250602.0
     aarch64: &fedora_latest_ref_aarch64
-      image: Fedora-Cloud-Base-AmazonEC2.aarch64-41-20250522.0
+      image: Fedora-Cloud-Base-AmazonEC2.aarch64-41-20250602.0
+
+  fedora_41_image_mode:
+    compose: Fedora-41-image-mode
+
+    x86_64: &fedora_latest_image_mode_ref_x86_64
+      image: Fedora-41-image-mode-x86_64
 
   fedora_42:
     compose: Fedora-42
@@ -17,6 +23,12 @@ composes:
     aarch64:
       image: Fedora-Cloud-Base-AmazonEC2.aarch64-42-Prerelease-20250208.2
 
+  fedora_42_image_mode:
+    compose: Fedora-42-image-mode
+
+    x86_64:
+      image: Fedora-42-image-mode-x86_64
+
   # TFT-1221
   fedora_latest:
     compose: Fedora-latest
@@ -24,21 +36,24 @@ composes:
     x86_64: *fedora_latest_ref_x86_64
     aarch64: *fedora_latest_ref_aarch64
 
+  fedora_latest_image_mode:
+    compose: Fedora-latest-image-mode
+
+    x86_64: *fedora_latest_image_mode_ref_x86_64
+
   fedora_rawhide:
     compose: Fedora-Rawhide
 
     x86_64:
-      image: Fedora-Cloud-Base-AmazonEC2.x86_64-Rawhide-20250522.0
+      image: Fedora-Cloud-Base-AmazonEC2.x86_64-Rawhide-20250602.0
     aarch64:
-      image: Fedora-Cloud-Base-AmazonEC2.aarch64-Rawhide-20250522.0
+      image: Fedora-Cloud-Base-AmazonEC2.aarch64-Rawhide-20250602.0
 
-  fedora_40_image_mode:
-    compose: Fedora-40-image-mode
+  fedora_rawhide_image_mode:
+    compose: Fedora-Rawhide-image-mode
 
     x86_64:
-      image: Fedora-40-image-mode-x86_64
-    aarch64:
-      image: Fedora-40-image-mode-aarch_64
+      image: Fedora-Rawhide-image-mode-x86_64
 
   centos_7:
     compose: CentOS-7
@@ -60,22 +75,26 @@ composes:
     compose: CentOS-Stream-9
 
     x86_64:
-      image: CentOS Stream 9 x86_64 20250520
+      image: CentOS Stream 9 x86_64 20250526
     aarch64:
-      image: CentOS Stream 9 aarch64 20250512
+      image: CentOS Stream 9 aarch64 20250526
 
   centos_stream_9_image_mode:
     compose: CentOS-Stream-9-image-mode
 
     x86_64:
       image: CentOS-Stream-9-image-mode-x86_64
-    aarch64:
-      image: CentOS-Stream-9-image-mode-aarch64
 
   centos_stream_10:
     compose: CentOS-Stream-10
 
     x86_64:
-      image: CentOS Stream 10 x86_64 20250520
+      image: CentOS Stream 10 x86_64 20250529
     aarch64:
-      image: CentOS Stream 10 aarch64 20250520
+      image: CentOS Stream 10 aarch64 20250529
+
+  centos_stream_10_image_mode:
+    compose: CentOS-Stream-10-image-mode
+
+    x86_64:
+      image: CentOS-Stream-10-image-mode-x86_64
