--- a/terragrunt/environments/staging/worker-public/citool-config/guest-setup/pre-artifact-installation/entrypoint.yaml
+++ b/terragrunt/environments/staging/worker-public/citool-config/guest-setup/pre-artifact-installation/entrypoint.yaml
@@ -6,6 +6,7 @@
     # DO NOT ENABLE BY DEFAULT, IT BREAKS PYTHON TEST SUITE (and can others)
     # - include_tasks: nosync.yaml
     - include_tasks: update-and-restart.yaml
+    - include_tasks: workaround-fedora-eln.yaml
     - include_tasks: workaround-fedora-rawhide.yaml
     - include_tasks: workaround-fedora-release.yaml
     - include_tasks: workaround-centos-7.yaml
