--- a/Makefile.maintainer
+++ b/Makefile.maintainer
@@ -605,10 +605,15 @@ terminate/artemis/guests/staging/ci: .FORCE  ## Terminate all EC2 instances crea
 terminate/artemis/guests/production: .FORCE  ## Terminate all EC2 instances created by Artemis | staging
 	@bash $$PROJECT_ROOT/setup/terminate_artemis_guests.sh production || true
 
-cleanup/ci: .FORCE staging/kubeconfig  ## Cleanup CI leftovers
+cleanup/ci: .FORCE staging/kubeconfig cleanup/public/security-groups  ## Cleanup CI leftovers
 	@echo "$(ccgreen)Deleting leftover EKS CI clusters$(ccend)"
 	@bash $$PROJECT_ROOT/setup/terminate_eks_ci_clusters.sh
 	@echo "$(ccgreen)Terminating leftover namespaces from staging EKS$(ccend)"
 	@bash $$PROJECT_ROOT/setup/terminate_eks_ci_namespaces.sh
 	@echo "$(ccgreen)Removing unused load balancers$(ccend)"
 	@bash $$PROJECT_ROOT/setup/terminate_unused_loadbalancers.sh
+
+cleanup/public/security-groups: .FORCE  ## Cleanup security groups in public AWS
+	aws --profile fedora_us_east_2 ec2 describe-security-groups | \
+		jq -r ".SecurityGroups[] | select(.GroupName | contains(\"artemis-guest-$$(date -d "last month" +%Y-%m)-\")) | .GroupId" | \
+		parallel aws --profile fedora_us_east_2 ec2 delete-security-group --group-id
