skip rcm tools install for ppc64 rhel7

--- a/terragrunt/environments/production/worker-redhat/citool-config/guest-setup/pre-artifact-installation/install-koji-brew.yaml
+++ b/terragrunt/environments/production/worker-redhat/citool-config/guest-setup/pre-artifact-installation/install-koji-brew.yaml
@@ -36,6 +36,7 @@
     - '"auto-osbuild" not in IMAGE_NAME|lower'
     - '"composer-api" not in IMAGE_NAME|lower'
     - '"hardened" not in IMAGE_NAME|lower'
+    - 'ansible_architecture != "ppc64"'
 
 - block:
     - name: Add RCM Repository for RHEL8+
