--- a/terragrunt/environments/dev/worker-public/citool-config/guest-setup/pre-artifact-installation/workaround-fedora-release.yaml
+++ b/terragrunt/environments/dev/worker-public/citool-config/guest-setup/pre-artifact-installation/workaround-fedora-release.yaml
@@ -3,7 +3,9 @@
 # https://bugzilla.redhat.com/show_bug.cgi?id=1872248
 - name: Workaround - update Fedora release and related packages
   command: "dnf -y update --nogpgcheck fedora*"
-  when: 'ansible_distribution == "Fedora"'
+  when:
+    - 'ansible_distribution == "Fedora"'
+    - '"image-mode" not in IMAGE_NAME|lower'
   retries: "{{ pkg_retry_count }}"
   delay: "{{ pkg_retry_delay }}"
   until: result_package is succeeded
